formatting & added play links

--- a/static/md/3.3_Funcitons.md
+++ b/static/md/3.3_Funcitons.md
@@ -24,9 +24,9 @@ fn another_function() {
 
 - `main` function is the default entry point for the program
 
-- `snake_case` is the convention for function names
-
 - You can access functions above their declaration, order doesn't matter
+
+**convention :** `snake_case` for function names
 
 [play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=81f40bf6c93ba4a303e3ff328cc33c77)
 
@@ -50,9 +50,9 @@ fn another_function(x: i32) {
 
 - `x: i32` declares parameter with type
 
-- multiple parameter declarations are Separated with commas
+- Multiple parameter declarations are Separated with commas
 
-- must declare the type of each parameter
+- Must declare the type of each parameter
 
 [play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=73e301489cea500f1ee183bddbeda3f2)
 
@@ -94,6 +94,21 @@ class: left
 
 Adding a semicolon to the end of an expression, makes it a statement
 
+```rust
+fn main() {
+    let x = 5;
+
+    let y = {
+        let x = 3;
+        x + 1
+    };
+
+    println!("The value of y is: {}", y);
+}
+```
+
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=5c8ebabf06b76df79ca1666ad57b78e1)
+
 ---
 
 class: left
@@ -108,19 +123,9 @@ class: left
 
 - Return early using `return` keyword or last expression is returned implicitly
 
-**convention :** The official style is **"return is only for early returns"**
-
 - Functions that dosen't return anything explicityly returns empty tuple `()`
 
----
-
-class: left
-
-# macros
-
-- Macros unlike functions end with an exclamation `!`
-
-- Macros expand at compile time to more complex function calls
+**convention :** The official style is **"return is only for early returns"**
 
 ---
 
@@ -135,6 +140,8 @@ fn five() -> i32 {
 ```
 
 - 5 is the last expression and it is returned implicitly
+
+[play]()
 
 ---
 
@@ -151,14 +158,12 @@ fn plus_one(x: i32) -> i32 {
 ```rust
 error[E0308]: mismatched types
  --> src/main.rs:7:28
-  |
 7 |   fn plus_one(x: i32) -> i32 {
   |  ____________________________^
 8 | |     x + 1;
   | |          - help: consider removing this semicolon
 9 | | }
   | |_^ expected i32, found ()
-  |
   = note: expected type `i32`
              found type `()`
 ```
@@ -170,6 +175,18 @@ error[E0308]: mismatched types
 - Since nothing is explicitly returned an empty tuple `()` is returned
 
 - Panics with `mismatched types` error
+
+[play]()
+
+---
+
+class: left
+
+# macros
+
+- Macros unlike functions end with an exclamation `!`
+
+- Macros expand at compile time to more complex function calls
 
 ---
 
