--- a/static/md/3.5_Control_Flow.md
+++ b/static/md/3.5_Control_Flow.md
@@ -21,13 +21,13 @@ fn main() {
 }
 ```
 
-* Starts with `if` keyword
+- Starts with `if` keyword
 
-* Follwed by condition, which should evaluate to boolean
+- Follwed by condition, which should evaluate to boolean
 
-* Rust won't convert non boolean types to booleans
+- Rust won't convert non boolean types to booleans
 
-* Block of code in `{}` called **arms** is executed based on condition
+- Block of code in `{}` called **arms** is executed based on condition
 
 ---
 
@@ -63,6 +63,8 @@ Multiple conditions with **else if**
   }
 ```
 
+[play]()
+
 ---
 
 class: left
@@ -91,15 +93,17 @@ let number = if condition {
 
 An `if` without an `else` always returns an empty tuple `()`
 
+[play]()
+
 ---
 
 class: left
 
 # Repetition with Loops
 
-* Execute a block of code more than once
+- Execute a block of code more than once
 
-* They are three types...**loop**, **while** and **for**
+- They are three types...**loop**, **while** and **for**
 
 ---
 
@@ -107,7 +111,7 @@ class: left
 
 # Loop
 
-* Execute a block of code over and over, until you explicitly tell it to stop
+- Execute a block of code over and over, until you explicitly tell it to stop
 
 ```rust
 fn main() {
@@ -119,11 +123,13 @@ fn main() {
 
 Cancel with
 
-* `ctrl+c`
+- `ctrl+c`
 
 or
 
-* `break` keyword for stopping gracefully
+- `break` keyword for stopping gracefully
+
+[play]()
 
 ---
 
@@ -131,7 +137,7 @@ class: left
 
 # While
 
-* Execute a block of code while a condition holds true
+- Execute a block of code while a condition holds true
 
 ```rust
 fn main() {
@@ -147,6 +153,8 @@ fn main() {
 }
 ```
 
+[play]()
+
 ---
 
 class: left
@@ -155,7 +163,7 @@ class: left
 
 Loop over the elements of a collection, such as
 
-* an array
+- an array
 
   ```rust
   fn main() {
@@ -166,7 +174,9 @@ Loop over the elements of a collection, such as
   }
   ```
 
-* a range
+[play]()
+
+- a range
 
   ```rust
   fn main() {
@@ -177,22 +187,24 @@ Loop over the elements of a collection, such as
   }
   ```
 
+[play]()
+
 ---
 
 class: left
 
 # Summary
 
-* **if** and **else if** expression should have condition which evaluates to
+- **if** and **else if** expression should have condition which evaluates to
   boolean
 
-* Blocks of code in `{}` called **arms** are executed based on the condition
+- Blocks of code in `{}` called **arms** are executed based on the condition
   value and all the arms should be of same type
 
-* **if** can be used in a statement and assigned to a variable
+- **if** can be used in a statement and assigned to a variable
 
-* **loop** executes for ever, untill **break** statement
+- **loop** executes for ever, untill **break** statement
 
-* **while** executes untill the condition is true
+- **while** executes untill the condition is true
 
-* **for** executes for each element in the collection
+- **for** executes for each element in the collection
