--- a/static/md/4.1_What_is_Ownership.md
+++ b/static/md/4.1_What_is_Ownership.md
@@ -26,7 +26,7 @@ class: left
 
 - Stack stores values in the order it gets and removes it in the opposite order
 
-- This is referred to as, last in first out (LIFO)
+- This is referred to as, last in first out (LIFO) ** more explanation on this **
 
 - All data should take fixed size
 
@@ -91,8 +91,7 @@ Rust is a block scoped language and is delimited by **{ }**
 ```rust
 {
   // s is not valid here, it’s not yet declared
-  // s is valid from this point forward
-  let s = "hello";
+  let s = "hello"; // s is valid from this point forward
   // do stuff with s
 } // this scope is now over, and s is no longer valid
 // throws an error, s is no longer available
@@ -178,10 +177,10 @@ Memory has to be
 ```rust
 // s is invalid outside the scope
 {
-  let s = String::from("hello"); // requests the memory it needs.
+  let s = String::from("hello"); // String::from requests the memory it needs.
   // s is valid from this point forward
   // do stuff with s
-} // this scope is now over, and s is no longer valid
+} // this scope is now over, and s is no longer valid and memory freed up
 ```
 
 - Memory allocated in heap at runtime
@@ -233,7 +232,7 @@ class: left
 let s2 = s1;
 ```
 
-Copy the stack memory to the new variable s2
+Move the stack memory to the new variable s2
 
 <img src="https://doc.rust-lang.org/book/second-edition/img/trpl04-02.svg" width="400"/>
 
@@ -267,6 +266,8 @@ error[E0382]: use of moved value: `s1`
 
 Throws an error if you try to access after the assignement
 
+[play]()
+
 ---
 
 class: left
@@ -285,6 +286,8 @@ println!("s1 = {}, s2 = {}", s1, s2);
 
 - Clone the stack memory and heap memory for the new variable s2
 
+[play]()
+
 ---
 
 class: left
@@ -298,6 +301,10 @@ let x = 5;
 let y = x;
 ```
 
+- why this same problem won't happen for the values in stack
+  Invalidate s1 as both of them are pointing to the same heap because rust can't
+  decide which one to drop at the end of the scope
+
 - Bind the value 5 to x and copy the value of x and bind it to y
 
 - Not a move operation because, 5 is an integer of known size and allocated in stack
@@ -308,6 +315,8 @@ let y = x;
 
 - Tuples also, but only if they contain types that are also Copy,
   (i32, i32) is Copy, but (i32, String) is not
+
+[play]()
 
 ---
 
@@ -327,19 +336,23 @@ fn main() {
   makes_copy(x);      // x would move into the function,
                       // but i32 is Copy, so it’s okay to still
                       // use x afterward.
-} // Here, x goes out of scope, then s.
+} // Here, x and s goes out of scope.
 // But since s's value was moved, nothing
 // special happens.
 
 fn takes_ownership(some_string: String) { // some_string comes into scope
+                                          // value is moved here
   println!("{}", some_string);
 } // Here, some_string goes out of scope and `drop` is called. The backing
 // memory is freed.
 
-fn makes_copy(some_integer: i32) { // some_integer comes into scope.
+fn makes_copy(some_integer: i32) {  // some_integer comes into scope.
+                                    // value is copied here
   println!("{}", some_integer);
 } // Here, some_integer goes out of scope. Nothing special happens.
 ```
+
+[play]()
 
 ---
 
@@ -374,6 +387,13 @@ fn takes_and_gives_back(a_string: String) -> String { // a_string comes into
 }
 ```
 
+[play]()
+
+- returns a value
+- takes a value and returns nothing
+- takes a value and retruns the value
+- takes a value and returns the modified value
+
 ---
 
 class: left
@@ -397,6 +417,8 @@ fn calculate_length(s: String) -> (String, usize) {
 - Return the value to give back the ownership else parent scope won't have value
 
 - Tedious to tranfer back all the time, use **borrowing**
+
+[play]()
 
 ---
 
