--- a/static/md/4.2_References_and_Borrowing.md
+++ b/static/md/4.2_References_and_Borrowing.md
@@ -27,19 +27,22 @@ fn calculate_length(s: &String) -> usize {
 
 <img src="https://doc.rust-lang.org/book/second-edition/img/trpl04-05.svg" width="500"/>
 
+[play]()
+
 ---
 
 class: left
 
 ### &ref
 
-* Arguments and parameters are prepended with **&**
+- Arguments and parameters are prepended with **&**
 
-* Since we don't have ownership
+- Since we don't have ownership
 
-  * No need to return the values to give back ownership
+  - No need to return the values to give back ownership
 
-  * Rust won't **drop** the value when the variable goes out of scope
+  - Rust won't **drop** the value when the variable goes out of scope
+    in the refferenced scope
 
 ---
 
@@ -47,11 +50,11 @@ class: left
 
 # Mutable References
 
-* **Mutable reference is borrowing**
+- **Mutable reference is borrowing**
 
-* Like variables, references are also immutable by default
+- Like variables, references are also immutable by default
 
-* Use **mut** to make it mutable
+- Use **mut** to make it mutable
 
 ```rust
 fn main() {
@@ -64,29 +67,31 @@ fn change(some_string: &mut String) {
 }
 ```
 
+[play]()
+
 ---
 
 class: left
 
 # The Rules of References
 
-* References must be valid
+- References must be valid
 
-    and
+  and
 
-* In a given scope, there must be either
+- In a given scope, there must be either
 
-  * One mutable reference
+  - One mutable reference
 
-      or
+    or
 
-  * Any number of immutable reference
+  - Any number of immutable reference
 
 ---
 
 class: left
 
-### One mutable reference
+# One mutable reference
 
 You can only have one mutable reference to a particular piece of data in a
 single scope
@@ -105,11 +110,13 @@ let mut s = String::from("hello");
 let r2 = &mut s; // the previous mutable reference is already dropped
 ```
 
+[play]()
+
 ---
 
 class: left
 
-### Can't mix mutable and immutable references
+# Can't mix mutable and immutable references
 
 You can't have mutable and immutable references in the same scope
 
@@ -120,7 +127,7 @@ let r2 = &s; // no problem
 let r3 = &mut s; // BIG PROBLEM
 ```
 
-<!-- * even in different scopes ???-->
+[play]()
 
 ---
 
@@ -131,13 +138,15 @@ class: left
 A data race is similar to a race condition and happens when these three
 behaviors occur...
 
-  * Two or more pointers access the same data at the same time
+- Two or more pointers access the same data at the same time
 
-  * At least one of the pointers is being used to write to the data
+- At least one of the pointers is being used to write to the data
 
-  * There’s no mechanism being used to synchronize access to the data
+- There’s no mechanism being used to synchronize access to the data
 
 Mutable references, with above characterestics prevents data race from happening
+
+[play]()
 
 ---
 
@@ -145,10 +154,10 @@ class: left
 
 # Dangling References
 
-* a pointer that references a location in memory that may have been given to
+- a pointer that references a location in memory that may have been given to
   someone else, by freeing some memory while preserving a pointer to that memory
 
-* Rust guarentees that the data will not go out of scope before the reference
+- Rust guarentees that the data will not go out of scope before the reference
   to the data does
 
 ```rust
@@ -161,12 +170,14 @@ fn dangle() -> &String {
 }
 ```
 
-* s is created inside dangle and deallocated on `}`.
+- s is created inside dangle and deallocated on `}`.
 
-* But we tried to return a reference to it, which is pointing to an invalid
+- But we tried to return a reference to it, which is pointing to an invalid
   String!
 
-* Rust won’t let us do this
+- Rust won’t let us do this
+
+[play]()
 
 ---
 
@@ -174,9 +185,9 @@ class: left
 
 # Dereferencing
 
-* The opposite of referencing by using **&** is dereferencing
+- The opposite of referencing by using **&** is dereferencing
 
-* ***** is the dereference operator
+- **\*** is the dereference operator
 
 ---
 
@@ -184,14 +195,14 @@ class: left
 
 # Summary
 
-* Use **&** pass references to functions rather than giving ownership
+- Use **&** pass references to functions rather than giving ownership
 
-* References are also immutable by default; use **mut** to make it mutable
+- References are also immutable by default; use **mut** to make it mutable
 
-* There can be one mutable reference or multiple immutable references
+- There can be one mutable reference or multiple immutable references
   and they all have to be valid
 
-* This fixes data race conditions and dangling references
+- This fixes data race conditions and dangling references
 
-* You control the memory usage by using the ownership rules and Rust
+- You control the memory usage by using the ownership rules and Rust
   automatically clean up that data when the owner goes out of scope
