--- a/static/md/5.1_Defining_and_Instantiating_Struct.md
+++ b/static/md/5.1_Defining_and_Instantiating_Struct.md
@@ -10,14 +10,14 @@ class: left
 
 # Struct
 
-* A struct or structure, is a custom data type that lets us name and package
+- A struct or structure, is a custom data type that lets us name and package
   together multiple related values that make up a meaningful group
 
-* Its like tuples but with names
+- Its like tuples but with names
 
-* Can be composed of different types
+- Can be composed of different types
 
-* They are like an object’s data attributes in Object Oriented Languages
+- They are like an object’s data attributes in Object Oriented Languages
 
 ---
 
@@ -25,12 +25,12 @@ class: left
 
 # Define a Struct
 
-* Structs are defined with **struct** keyword, follwed by name, starting
+- Structs are defined with **struct** keyword, follwed by name, starting
   with capital letter
 
-* Name should determine the significance of pieces of data grouped together
+- Name should determine the significance of pieces of data grouped together
 
-* Inside **{}** we define the name and type of the peices of data called `fields`
+- Inside **{}** we define the name and type of the peices of data called `fields`
 
 ```rust
 struct User {
@@ -54,11 +54,10 @@ let mut user1 = User {
 };
 ```
 
-* The struct definition is like a general template for the type, and instances
+- The struct definition is like a general template for the type, and instances
   fill in that template with particular data to create values of the type
 
-* No need to define in the same order we declared
-  <!-- can we miss few values from the declaration or add them ? -->
+- No need to define in the same order we declared
 
 ---
 
@@ -66,16 +65,16 @@ class: left
 
 # Access or change Struct values
 
-* Use dot notation
+- Use dot notation
 
 ```rust
   println!(user1.username);
   user1.username = Srting::from("anotherusername123")
 ```
 
-* To change a field, entire object must be mutable
+- To change a field, entire object must be mutable
 
-* No single field mutability
+- No single field mutability
 
 ---
 
@@ -162,11 +161,11 @@ class: left
 struct Color(i32, i32, i32);
 ```
 
-* Gives the whole tuple a name and make it a different type than other tuples
+- Gives the whole tuple a name and make it a different type than other tuples
 
-* But naming each field like a regular struct would be verbose or redundant
+- But naming each field like a regular struct would be verbose or redundant
 
-* `struct` keyword follwed by tuple name and the types of data in `()`
+- `struct` keyword follwed by tuple name and the types of data in `()`
 
 ---
 
@@ -182,9 +181,9 @@ let black = Color(0, 0, 0);
 let origin = Point(0, 0, 0);
 ```
 
-* Black and origin are of different types, they are not of type `tuple`
+- Black and origin are of different types, they are not of type `tuple`
 
-* Destructure and access individual values with . follwed by their index
+- Destructure and access individual values with . follwed by their index
 
 ---
 
@@ -198,9 +197,9 @@ Structs that don’t have any fields
 struct QuitMessage; // unit struct
 ```
 
-* They behave similar to `()`
+- They behave similar to `()`
 
-* Useful, when you need to implement a trait on some type, but don't have data
+- Useful, when you need to implement a trait on some type, but don't have data
 
 ---
 
@@ -208,12 +207,12 @@ class: left
 
 # Summary
 
-* A custom data type that names and packages multiple related values
+- A custom data type that names and packages multiple related values
 
-* use **..** for updating struct
+- use **..** for updating struct
 
-* struct as last expression in function returns a new instance
+- struct as last expression in function returns a new instance
 
-* Struct tuples are useful when naming each field is verbose
+- Struct tuples are useful when naming each field is verbose
 
-* unit like structs are similar to `()`
+- unit like structs are similar to `()`
