--- a/static/md/5.3_Method_Syntax.md
+++ b/static/md/5.3_Method_Syntax.md
@@ -13,9 +13,9 @@ class: left
 Methods are similar to functions, except they’re defined within the context of
 a struct, enum or trait and their first parameter is always **&self**
 
-* Declared with the `fn` keyword followed by name
+- Declared with the `fn` keyword followed by name
 
-* They can have parameters and a return value
+- They can have parameters and a return value
 
 ```rust
 #[derive(Debug)]
@@ -37,15 +37,17 @@ fn main() {
 }
 ```
 
+[play]()
+
 ---
 
 class: left
 
 # Calling methods
 
-* Methods can be called with `.` dot syntax
+- Methods can be called with `.` dot syntax
 
-* `rect1.area()` will call the area method on the `rect1` struct
+- `rect1.area()` will call the area method on the `rect1` struct
 
 ---
 
@@ -68,6 +70,8 @@ impl Rectangle {
 }
 ```
 
+[play]()
+
 ---
 
 class: left
@@ -76,9 +80,9 @@ class: left
 
 Funcitons in `impl` block that dosen't take `&self` as parameter
 
-* They are **functions not methods** as they don't have instance of struct
+- They are **functions not methods** as they don't have instance of struct
 
-* Often used for constructors that will return a new instance of the struct
+- Often used for constructors that will return a new instance of the struct
 
 ```rust
 impl Rectangle {
@@ -87,6 +91,8 @@ impl Rectangle {
   }
 }
 ```
+
+[play]()
 
 ---
 
@@ -98,10 +104,12 @@ class: left
 let sq = Rectangle::square(3);
 ```
 
-* The funciton is namespaced by the struct
+- The funciton is namespaced by the struct
 
-* **::** is used for both Associated funcitons and the namespace created by
+- **::** is used for both Associated funcitons and the namespace created by
   modules
+
+[play]()
 
 ---
 
@@ -109,11 +117,13 @@ class: left
 
 # Mutable self
 
-* **&self** by default is a immutable reference
+- **&self** is an immutable reference
 
-* **&mut self** will modify the object data in the method
+- **&mut self** will modify the object data in the method
 
-* **self** will move the data to the method
+- **self** will move the data to the method
+
+[play]()
 
 ---
 
@@ -137,26 +147,28 @@ impl Rectangle {
 }
 ```
 
+[play]()
+
 ---
 
 class: left
 
 # Summary
 
-* Methods are functions defined in a **impl** block with a default parameter **&self**
+- Methods are functions defined in a **impl** block with a default parameter **&self**
 
-* A struct can have multiple **impl** blocks
+- A struct can have multiple **impl** blocks
 
-* If the parameter contains...
+- If the parameter contains...
 
-  * **&self** : method can use the values of the struct, but not change them
+  - **&self** : method can use the values of the struct, but not change them
 
-  * **&mut self** : method can modify the values
+  - **&mut self** : method can modify the values
 
-  * **self** : method will consume the value, which will move
+  - **self** : method will consume the value, which will move
 
-  * **no self** : called Associate Functions, used as "constructor"
+  - **no self** : called Associate Functions, used as "constructor"
 
-* If `&self` they are invoked with `.`
+- If `&self` they are invoked with `.`
 
-* If no `self` they are invoked with `::`
+- If no `self` they are invoked with `::`
