--- a/static/md/7.1_mod_and_the_Filesystem.md
+++ b/static/md/7.1_mod_and_the_Filesystem.md
@@ -12,15 +12,15 @@ class: left
 
 Module system enables the reuse of code in an organized fashion
 
-* A module is a namespace that contains definitions of functions or types
+- A module is a namespace that contains definitions of functions or types
 
-* Choose whether those definitions
+- Choose whether those definitions
 
-  * visible outside their module (public)
+  - visible outside their module (public)
 
   or
 
-  * not (private)
+  - not (private)
 
 ---
 
@@ -28,10 +28,10 @@ class: left
 
 # `mod` and the filesystem
 
-* `$ cargo new hello_world --bin` will create a binary, remove `--bin` to create
+- `$ cargo new hello_world --bin` will create a binary, remove `--bin` to create
   a library
 
-* Use `cargo build` to build the library
+- Use `cargo build` to build the library
 
 ---
 
@@ -46,12 +46,12 @@ mod network {
 }
 ```
 
-* The **mod** keyword followd by the module name declares a new module
+- The **mod** keyword followd by the module name declares a new module
 
-* Code within the module appears either immediately following the declaration
+- Code within the module appears either immediately following the declaration
   within curly brackets or in another file
 
-* Everything in the block `{}` is inside the namespace of the module
+- Everything in the block `{}` is inside the namespace of the module
 
 ---
 
@@ -141,10 +141,10 @@ mod server {
 }
 ```
 
-* In network.rs and client.rs, no need for `mod` declaration, just provides
+- In network.rs and client.rs, no need for `mod` declaration, just provides
   content of the the module
 
-* Where as for server you need to declare `mod` as it is inside network.rs
+- Where as for server you need to declare `mod` as it is inside network.rs
 
 ---
 
@@ -207,15 +207,15 @@ class: left
 
 # Rules of modules with regard to files
 
-* If a module named **foo** has
+- If a module named **foo** has
 
-  * **submodules** : Put the declarations for foo in a file named foo/mod.rs
+  - **submodules** : Put the declarations for foo in a file named foo/mod.rs
 
-  * **no submodules** : Put the declarations for foo in a file named foo.rs
+  - **no submodules** : Put the declarations for foo in a file named foo.rs
 
-* These rules apply recursively
+- These rules apply recursively
 
-* Modules should be declared in their parent module’s file using the **mod**
+- Modules should be declared in their parent module’s file using the **mod**
   keyword
 
 ---
@@ -224,8 +224,8 @@ class: left
 
 # Summary
 
-* Module provides namespaces and helps organize code
+- Module provides namespaces and helps organize code
 
-* **mod** declares a module and you can call the functions inside it with **::**
+- **mod** declares a module and you can call the functions inside it with **::**
 
-* If a module has submodules, put the declarations in a file named foo/mod.rs
+- If a module has submodules, put the declarations in a file named foo/mod.rs
