--- a/static/md/7.3_Referring_to_Names_in_Different_Modules.md
+++ b/static/md/7.3_Referring_to_Names_in_Different_Modules.md
@@ -24,9 +24,9 @@ fn main() {
 }
 ```
 
-* Call function by fully specifying its enclosing module’s path joined by **::**
+- Call function by fully specifying its enclosing module’s path joined by **::**
 
-* Someties referring to the fully qualified name can get quite lengthy
+- Someties referring to the fully qualified name can get quite lengthy
 
 ---
 
@@ -50,10 +50,10 @@ fn main() {
 }
 ```
 
-* **use** keyword follwed by the enclosing module’s path brings the module into
+- **use** keyword follwed by the enclosing module’s path brings the module into
   scope
 
-* It dosen't bring the childrens of module into scope
+- It dosen't bring the childrens of module into scope
 
 ---
 
@@ -106,10 +106,10 @@ fn main() {
 }
 ```
 
-* if bringing multiple items from one namespace into scope, you can list them
+- if bringing multiple items from one namespace into scope, you can list them
   using curly brackets and commas in the last position
 
-* Still specifying the TrafficLight namespace for the Green variant because we
+- Still specifying the TrafficLight namespace for the Green variant because we
   didn’t include Green in the use statement
 
 ---
@@ -162,9 +162,9 @@ class: left
 
 When compared with using the root `::`
 
-* Super is helpful incase of deep modules
+- Super is helpful incase of deep modules
 
-* Super won't break the modules even if they are rearranged
+- Super won't break the modules even if they are rearranged
 
 ---
 
@@ -172,14 +172,14 @@ class: left
 
 # Summary
 
-* You call a function in side a module with fully qualified name
+- You call a function in side a module with fully qualified name
   `a::series::of::nested_modules();`
 
-* **use** keyword follwed by the enclosing module’s path brings the module into
+- **use** keyword follwed by the enclosing module’s path brings the module into
   scope
 
-* Bring all the items in a namespace into scope at once using glob `*`
+- Bring all the items in a namespace into scope at once using glob `*`
 
-* **::** at the begining of the path lets you access the root of the module
+- **::** at the begining of the path lets you access the root of the module
 
-* **super::** lets you access the parent directory
+- **super::** lets you access the parent directory
