--- a/static/md/8.0_Common_Collections.md
+++ b/static/md/8.0_Common_Collections.md
@@ -10,22 +10,22 @@ class: left
 
 # Collections
 
-* Rust’s standard library includes a number of very useful data structures
+- Rust’s standard library includes a number of very useful data structures
   called collections.
 
-* Most data types represent one specific value, but collections can contain
+- Most data types represent one specific value, but collections can contain
   **multiple values**
 
-* Unlike the built-in array and tuple types, the data these collections point
+- Unlike the built-in array and tuple types, the data these collections point
   to is stored on the heap, which means
 
-  * Amount of data does not need to be known at compile time
+  - Amount of data does not need to be known at compile time
 
-  * Can grow or shrink as the program runs
+  - Can grow or shrink as the program runs
 
-* Each kind of collection has different capabilities and costs
+- Each kind of collection has different capabilities and costs
 
-* Choosing an appropriate one is a skill you’ll develop over time
+- Choosing an appropriate one is a skill you’ll develop over time
 
 ---
 
@@ -35,11 +35,11 @@ class: left
 
 The major three types of collections commonly used are...
 
-  * **vector** : Store a variable number of values next to each other
+- **vector** : Store a variable number of values next to each other
 
-  * **string** : A collection of characters
+- **string** : A collection of characters
 
-  * **hash map** : Associate a value with a particular key
+- **hash map** : Associate a value with a particular key
 
 ---
 
@@ -47,6 +47,6 @@ class: left
 
 # Summary
 
-* Collections can contain multiple values
+- Collections can contain multiple values
 
-* vectors, strings and hash map are the most famous
+- vectors, strings and hash map are the most famous
