--- a/static/md/8.1_Vectors.md
+++ b/static/md/8.1_Vectors.md
@@ -10,19 +10,19 @@ class: left
 
 # Vectors Store Lists of Values
 
-* Store more than one value in a single data structure
+- Store more than one value in a single data structure
 
-* Puts all the values next to each other in memory
+- Puts all the values next to each other in memory
 
-* Implemented using generics
+- Implemented using generics
 
-* Also represented as `Vec<T>`
+- Also represented as `Vec<T>`
 
-* `Vec<T>` type provided by the standard library can hold any type
+- `Vec<T>` type provided by the standard library can hold any type
 
-* All the values should be of the same type
+- All the values should be of the same type
 
-* Use cases: lines of text in a file, prices of items in a shopping cart
+- Use cases: lines of text in a file, prices of items in a shopping cart
 
 ---
 
@@ -62,9 +62,9 @@ v.push(6);
 v.push(7);
 ```
 
-* Use `mut` to make it mutable
+- Use `mut` to make it mutable
 
-* Infers type from the data, so we don’t need to add Vec<i32> annotation
+- Infers type from the data, so we don’t need to add Vec<i32> annotation
 
 ---
 
@@ -79,11 +79,11 @@ class: left
 } // <- v goes out of scope and is freed here
 ```
 
-* Vector will be dropped when it goes out of scope
+- Vector will be dropped when it goes out of scope
 
-* When the vector gets dropped, all of its contents will also be dropped
+- When the vector gets dropped, all of its contents will also be dropped
 
-* The data, vector holds will be cleaned up
+- The data, vector holds will be cleaned up
 
 ---
 
@@ -91,27 +91,27 @@ class: left
 
 # Reading Elements of Vectors
 
-### `indexing` Syntax
+## `indexing` Syntax
 
 ```rust
 let v = vec![1, 2, 3, 4, 5];
 let third: &i32 = &v[2];
 ```
 
-* Gives the reference to the element
+- Gives the reference to the element
 
-* Non existent element access will cause a panic!
+- Non existent element access will cause a panic!
 
-### `get` Method
+## `get` Method
 
 ```rust
 let v = vec![1, 2, 3, 4, 5];
 let third: Option<&i32> = v.get(2);
 ```
 
-* Get method with the index passed as an argument gives us **Option<&T>**
+- Get method with the index passed as an argument gives us **Option<&T>**
 
-* Non existent element access will return **None** without panic
+- Non existent element access will return **None** without panic
 
 ---
 
@@ -121,11 +121,11 @@ class: left
 
 When the program has a valid reference the borrow checker enforces
 
-* **ownership rules**
+- **ownership rules**
 
 and
 
-* **borrowing rules**
+- **borrowing rules**
 
 to ensure references to the contents of the vector remain valid
 
@@ -155,9 +155,9 @@ error[E0502]: cannot borrow `v` as mutable because it is also borrowed as immuta
   | - immutable borrow ends here
 ```
 
-* Can't add an element to a vector while holding a reference to an item
+- Can't add an element to a vector while holding a reference to an item
 
-* Adding a new element might require allocating new memory and copying
+- Adding a new element might require allocating new memory and copying
   the old elements to the new space
 
 ---
@@ -166,7 +166,7 @@ class: left
 
 # Iterating Over the Values
 
-### With immutable reference to elements
+## With immutable reference to elements
 
 ```rust
 let v = vec![100, 32, 57];
@@ -175,7 +175,7 @@ for i in &v {
 }
 ```
 
-### With mutable reference to elements
+## With mutable reference to elements
 
 ```rust
 let mut v = vec![100, 32, 57];
@@ -184,7 +184,7 @@ for i in &mut v {
 }
 ```
 
-To change the value we have to use the dereference operator *****
+To change the value we have to use the dereference operator **\***
 
 ---
 
@@ -192,11 +192,11 @@ class: left
 
 # Using an Enum to Store Multiple Types
 
-* Vectors can only store values that are of the same type
+- Vectors can only store values that are of the same type
 
-* This can be inconvenient
+- This can be inconvenient
 
-* We can use `enum`, because all the variants of an enum are defined under the
+- We can use `enum`, because all the variants of an enum are defined under the
   same enum type
 
 ```rust
@@ -219,15 +219,15 @@ class: left
 
 # Reason for types in vector
 
-* Explicit about what types are allowed
+- Explicit about what types are allowed
 
-* How much memory on the heap will be needed to store each element
+- How much memory on the heap will be needed to store each element
 
-* Using an enum plus a match expression helps handle every possible case
+- Using an enum plus a match expression helps handle every possible case
 
-* If types are not known at compile time, enum technique won’t work
+- If types are not known at compile time, enum technique won’t work
 
-* You can use a trait object, in such case
+- You can use a trait object, in such case
 
 ---
 
@@ -235,19 +235,19 @@ class: left
 
 # Summary
 
-* **Vector** stores more than one value
+- **Vector** stores more than one value
 
-* Created with **Vec<T>::new()** or **vec![]** macro
+- Created with **Vec<T>::new()** or **vec![]** macro
 
-* Update a vector with **.push()**
+- Update a vector with **.push()**
 
-* Read elements of a vector with **index** or **.get()**
+- Read elements of a vector with **index** or **.get()**
 
-* When referencing elements, ownership and borrowing rules are applied
+- When referencing elements, ownership and borrowing rules are applied
 
-* You can itereate with a for loop using a reference **&** or a mutable reference
+- You can itereate with a for loop using a reference **&** or a mutable reference
   **&mut**
 
-* Since **vec** stores only one type, you can use **enum** to store multiple
+- Since **vec** stores only one type, you can use **enum** to store multiple
 
-* If types are not known at compile time, you can use **traits**
+- If types are not known at compile time, you can use **traits**
