--- a/static/md/8.2_Strings.md
+++ b/static/md/8.2_Strings.md
@@ -193,6 +193,9 @@ class: left
 
   ```rust
   fn add(self, s: &str) -> String {
+    let s3 = s1 + &s2;
+    s3
+  }
   ```
 
 - `+` is a generic and we can add only a `&str` to `String`
@@ -414,7 +417,7 @@ class: left
 
 # Methods for Iterating Over Strings
 
-### `chars`
+## `chars`
 
 ```rust
 for c in "नमस्ते".chars() {
@@ -435,7 +438,7 @@ for c in "नमस्ते".chars() {
 
 class: left
 
-### `bytes`
+## `bytes`
 
 ```rust
 for b in "नमस्ते".bytes() {
