--- a/static/md/9.0_Error_Handling.md
+++ b/static/md/9.0_Error_Handling.md
@@ -15,9 +15,9 @@ some action before your code compiles
 
 Two major categories
 
-* Recoverable
+- Recoverable
 
-* Unrecoverable
+- Unrecoverable
 
 Most Languages treat both of them in the same way, using exceptions
 
@@ -27,12 +27,12 @@ class: left
 
 # Recoverable
 
-* Situations in which it’s reasonable to report the problem to the user
+- Situations in which it’s reasonable to report the problem to the user
   and retry the operation
 
-* E.g. File not found error
+- E.g. File not found error
 
-* Provides `Result<T, E>`
+- Provides `Result<T, E>`
 
 ---
 
@@ -40,11 +40,11 @@ class: left
 
 # Unrecoverable
 
-* They are always symptoms of bugs
+- They are always symptoms of bugs
 
-* E.g. Trying to access a location beyond the end of an array
+- E.g. Trying to access a location beyond the end of an array
 
-* Provides `panic!` macro that stops execution on unrecoverable errors
+- Provides `panic!` macro that stops execution on unrecoverable errors
 
 ---
 
@@ -52,10 +52,10 @@ class: left
 
 # Summary
 
-* Rust’s commitment to reliability extends to error handling
+- Rust’s commitment to reliability extends to error handling
 
-* Two major types...
+- Two major types...
 
-  * Recoverable
+  - Recoverable
 
-  * Unrecoverable
+  - Unrecoverable
