--- a/static/md/9.1_Unrecoverable_Errors_with_panic.md
+++ b/static/md/9.1_Unrecoverable_Errors_with_panic.md
@@ -14,11 +14,11 @@ Rust provides `panic!` macro for cases of critical failures...
 
 `Panic!` macro will...
 
-  * print a failure message
+- print a failure message
 
-  * unwind and clean up the stack or abort
+- unwind and clean up the stack or abort
 
-  * and then quit.
+- and then quit.
 
 ---
 
@@ -26,17 +26,17 @@ class: left
 
 # Unwinding the Stack or Aborting in Response to a panic!
 
-* **Unwinding**
+- **Unwinding**
 
-  * Rust walks back the stack and clean up the data from each function
+  - Rust walks back the stack and clean up the data from each function
 
-  * Takes a lot of work and resulting binary will be large
+  - Takes a lot of work and resulting binary will be large
 
-* **Aborting**
+- **Aborting**
 
-  * Ends the program without cleanup and OS will clean the data
+  - Ends the program without cleanup and OS will clean the data
 
-  * Process will end quickly and the resulting binary will be small
+  - Process will end quickly and the resulting binary will be small
 
 ---
 
@@ -107,18 +107,18 @@ class: left
 
 # Using a panic! Backtrace
 
-* A backtrace is a list of all the functions that have been called to get to
+- A backtrace is a list of all the functions that have been called to get to
   this point
 
-* Set `RUST_BACKTRACE` environment variable to get a backtrace of exactly what
+- Set `RUST_BACKTRACE` environment variable to get a backtrace of exactly what
   happened to cause the error
 
-* The key to reading the backtrace is to start from the top and read until you
+- The key to reading the backtrace is to start from the top and read until you
   see files you wrote
 
-* To get backtraces, debug symbols must be enabled
+- To get backtraces, debug symbols must be enabled
 
-* They are enabled by default when using cargo build or cargo run without the
+- They are enabled by default when using cargo build or cargo run without the
   --release flag
 
 ---
@@ -127,10 +127,10 @@ class: left
 
 # Summary
 
-* `panic!` prints a failure message and unwinds, cleanup or abort and then quit
+- `panic!` prints a failure message and unwinds, cleanup or abort and then quit
 
-* Choose to cleanup or abort by setting `panic = 'abort'` in Cargo.toml
+- Choose to cleanup or abort by setting `panic = 'abort'` in Cargo.toml
 
-* A backtrace is a list of all the functions that have been called to get to this point
+- A backtrace is a list of all the functions that have been called to get to this point
 
-* Set `RUST_BACKTRACE` env variable to get a backtrace
+- Set `RUST_BACKTRACE` env variable to get a backtrace
