--- a/static/md/9.2_Recoverable_Errors_with_Result.md
+++ b/static/md/9.2_Recoverable_Errors_with_Result.md
@@ -10,12 +10,12 @@ class: left
 
 # Recoverable Errors
 
-* Most errors aren’t serious enough to stop the program entirely
+- Most errors aren’t serious enough to stop the program entirely
 
-* When a function fails, it’s for a reason that we can easily interpret and
+- When a function fails, it’s for a reason that we can easily interpret and
   respond to
 
-* eg; If we try to open a file and that operation fails because the file doesn’t
+- eg; If we try to open a file and that operation fails because the file doesn’t
   exist, we might want to create the file instead of terminating the process.
 
 ---
@@ -31,21 +31,21 @@ enum Result<T, E> {
 }
 ```
 
-* `T` and `E` are generic type parameters
+- `T` and `E` are generic type parameters
 
-* `T` represents the type of the value that will be
+- `T` represents the type of the value that will be
 
-  * returned in a success case
+  - returned in a success case
 
-  * within the Ok variant
+  - within the Ok variant
 
-* `E` represents the type of the error that will be
+- `E` represents the type of the error that will be
 
-  * returned in a failure case
+  - returned in a failure case
 
-  * within the Err variant
+  - within the Err variant
 
-* Because `Result` has these generic type parameters, we can use it in many
+- Because `Result` has these generic type parameters, we can use it in many
   different situations
 
 ---
@@ -62,13 +62,13 @@ fn main() {
 }
 ```
 
-* Opening a file returns a `Result` value because the function could fail
+- Opening a file returns a `Result` value because the function could fail
 
-* How do we know that ?
+- How do we know that ?
 
-  * Look at the standard library
+  - Look at the standard library
 
-  * Ask the compiler
+  - Ask the compiler
 
 ```rust
 let f: u32 = File::open("hello.txt");
@@ -92,24 +92,24 @@ This tells us the return type of the `File::open` function is a `Result<T, E>`
 
 Where...
 
-  * Where `T` is `std::fs::File`, which is a file handle
+- Where `T` is `std::fs::File`, which is a file handle
 
-  * And `E` is is `std::io::Error`
+- And `E` is is `std::io::Error`
 
 Which means that call to File::open might...
 
-  * succeed and return to us a file handle
+- succeed and return to us a file handle
 
-  or
+or
 
-  * fail and return error information
+- fail and return error information
 
 In case of `File::open` the value of f will be...
 
-  * succeeds : instance of `Ok` that contains a file handle
+- succeeds : instance of `Ok` that contains a file handle
 
-  * failure : instance of `Err` that contains more information about the kind of
-    error that happened
+- failure : instance of `Err` that contains more information about the kind of
+  error that happened
 
 Take different actions depending on the value `File::open` returned
 
@@ -129,14 +129,14 @@ fn main() {
 }
 ```
 
-* `Result` enum and its variants have been imported in the prelude
+- `Result` enum and its variants have been imported in the prelude
 
-* we don’t need to specify `Result::` before the `Ok` and `Err` variants
+- we don’t need to specify `Result::` before the `Ok` and `Err` variants
 
-* when the result is Ok, return the inner file value out of the Ok variant,
+- when the result is Ok, return the inner file value out of the Ok variant,
   and we then assign that file handle value to the variable f
 
-* The other arm of the match handles the case where we get an Err value from
+- The other arm of the match handles the case where we get an Err value from
   File::open. In this example, we’ve chosen to call the panic! macro
 
 ---
@@ -181,21 +181,21 @@ fn main() {
 
 class: left
 
-* `File::open` on error returns `io::Error` inside the `Err` variant
+- `File::open` on error returns `io::Error` inside the `Err` variant
 
-* `io::Error` is a struct provided by the standard library
+- `io::Error` is a struct provided by the standard library
 
-* `kind` method on struct will return an `io::ErrorKind` value
+- `kind` method on struct will return an `io::ErrorKind` value
 
-* `ErrorKind::NotFound` indicates the file we’re trying to open doesn’t exist yet
+- `ErrorKind::NotFound` indicates the file we’re trying to open doesn’t exist yet
 
-* `if error.kind() == ErrorKind::NotFound` is called a match guard
+- `if error.kind() == ErrorKind::NotFound` is called a match guard
 
-  * It’s an extra condition on a match arm that further refines the arm’s pattern
+  - It’s an extra condition on a match arm that further refines the arm’s pattern
 
-  * This condition must be true for that arm’s code to be run
+  - This condition must be true for that arm’s code to be run
 
-* WIP
+- WIP
 
 ---
 
@@ -203,11 +203,11 @@ class: left
 
 # Shortcuts for Panic on Error: unwrap and expect
 
-* Using match works well enough
+- Using match works well enough
 
-* But it can be a bit verbose
+- But it can be a bit verbose
 
-* Doesn’t always communicate intent well
+- Doesn’t always communicate intent well
 
 ---
 
@@ -217,11 +217,11 @@ class: left
 
 `unwrap` is a shortcut method that is implemented just like the `match`
 
-* If the Result value is
+- If the Result value is
 
-  * Ok variant : unwrap will return the value inside the Ok
+  - Ok variant : unwrap will return the value inside the Ok
 
-  * Err variant : unwrap will call the panic! macro for us
+  - Err variant : unwrap will call the panic! macro for us
 
 ```rust
 use std::fs::File;
@@ -243,11 +243,11 @@ class: left
 
 # expect
 
-* Works the same way as unwrap
+- Works the same way as unwrap
 
 except...
 
-* Customize the panic! message instead of the default
+- Customize the panic! message instead of the default
 
 ```rust
 use std::fs::File;
@@ -270,7 +270,7 @@ class: left
 
 # Propagating Errors
 
-* WIP
+- WIP
 
 ---
 
@@ -291,7 +291,7 @@ fn read_username_from_file() -> Result<String, io::Error> {
 }
 ```
 
-* WIP
+- WIP
 
 ---
 
@@ -299,9 +299,9 @@ class: left
 
 # `?` Can Only Be Used in Functions That Return Result
 
-* `?` can only be used in functions that have a return type of Result
+- `?` can only be used in functions that have a return type of Result
 
-* WIP
+- WIP
 
 ---
 
@@ -309,4 +309,4 @@ class: left
 
 # Summary
 
-* WIP
+- WIP
