--- a/static/md/9.3_To_panic_or_Not_To_panic.md
+++ b/static/md/9.3_To_panic_or_Not_To_panic.md
@@ -10,14 +10,16 @@ class: left
 
 # Panic! or Not
 
-* `panic!` can be called for any error situation, recoverable or unrecoverable
+- There is no way to recover after `panic!`
 
-* But, you are making the decision on behalf of the code calling your code that
+- `panic!` can be called for any error situation, recoverable or unrecoverable
+
+- But, you are making the decision on behalf of the code calling your code that
   the error is unrecoverable
 
-* `Result` will give the option to the callig code to decide wether to panic or not
+- `Result` will give the option to the callig code to decide wether to panic or not
 
-* Returning `Result` is a good default choice
+- Returning `Result` is a good default choice
 
 ---
 
@@ -25,23 +27,33 @@ class: left
 
 # Places to `Panic!`
 
-* When it’s possible that your code could end up in a bad state
+It’s Perfectly fine to Panic in
 
-  * The bad state is not something that’s expected to happen occasionally
+- Examples
 
-  * Your code after this point needs to rely on not being in this bad state
+- Prototype Code and
 
-  * There’s not a good way to encode this information in the types you use
+- Tests
 
-* It’s Perfectly fine to Panic in
+---
 
-  * Examples
+class: left
 
-  * Prototype Code and
+# Cases in Which You Have More Information Than the Compiler
 
-  * Tests
+- use `unwrap` when you can ensure that Result will have an Ok value, but
+  the logic isn’t something compiler understands
 
-* When You Have More Information Than the Compiler
+```rust
+#![allow(unused_variables)]
+fn main() {
+use std::net::IpAddr;
+
+let home: IpAddr = "127.0.0.1".parse().unwrap();
+}
+```
+
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=1550c40f386b2be6839747ee98141d10)
 
 ---
 
@@ -49,7 +61,27 @@ class: left
 
 # Guidelines for Error Handling
 
-* WIP
+When it’s possible that your code could end up in a bad state
+
+**bad state** is is when some assumption, guarantee, contract, or invariant has been broken, such as when invalid values, contradictory values, or missing values are passed to your code
+
+- The bad state is not something that’s expected to happen occasionally
+
+- Your code after this point needs to rely on not being in this bad state
+
+- There’s not a good way to encode this information in the types you use
+
+---
+
+class: left
+
+# panic
+
+- to inform the consumer of your code in case of invalid input
+
+- in case the code you are consuming does something which you can't fix
+
+eg; rust std lib panics in case of out of bounds memory access
 
 ---
 
@@ -57,7 +89,63 @@ class: left
 
 # Creating Custom Types for Validation
 
-* WIP
+Data has constraints they can be enforced in many ways...
+
+```rust
+loop {
+    // --snip--
+
+    let guess: i32 = match guess.trim().parse() {
+        Ok(num) => num,
+        Err(_) => continue,
+    };
+
+    if guess < 1 || guess > 100 {
+        println!("The secret number will be between 1 and 100.");
+        continue;
+    }
+
+    match guess.cmp(&secret_number) {
+    // --snip--
+}
+```
+
+- type (i32) validates that the input is a number
+- if expression ensures the number is in the agreed range
+
+---
+
+class: left
+
+# custom types
+
+```rust
+#![allow(unused_variables)]
+fn main() {
+    pub struct Guess {
+        value: i32,
+    }
+    impl Guess {
+        pub fn new(value: i32) -> Guess {
+            if value < 1 || value > 100 {
+                panic!("Guess value must be between 1 and 100, got {}.", value);
+            }
+            Guess {
+                value
+            }
+        }
+        pub fn value(&self) -> i32 {
+            self.value
+        }
+    }
+}
+```
+
+- `Guess` struct that has a field named `value` that holds an i32
+
+- associated function `new` on Guess creates instances of Guess values
+
+- `value` is private and can be get it using a getter function `value`
 
 ---
 
@@ -65,4 +153,6 @@ class: left
 
 # Summary
 
-* WIP
+- `panic!` - state can’t be handled and the process has to stop
+
+- `Result` - enum tells you to handle potential success or failure
