--- a/static/md/4.3_Slices.md
+++ b/static/md/4.3_Slices.md
@@ -21,8 +21,7 @@ class: left
 
 - string[start..end]
 
-- `start..end` syntax is a range that begins at start and continues up to
-  but not including, end
+- `start..end` begins at start and continues up to but not including, end
 
 - Slice will store pointer to the staring_index and the length
 
