--- a/static/md/6.1_Defining_an_Enum.md
+++ b/static/md/6.1_Defining_an_Enum.md
@@ -12,9 +12,9 @@ class: left
 
 **enum** also known as **enumeration**
 
-* Define a type by enumerating its possible values
+- Define a type by enumerating its possible values
 
-* Enum data structure can only be one of the variants
+- Enum data structure can only be one of the variants
 
 ```rust
 enum IpAddrKind {
@@ -36,7 +36,7 @@ let four = IpAddrKind::V4;
 let six = IpAddrKind::V6;
 ```
 
-* Both IpAddrKind::V4 and IpAddrKind::V6 are of the same type: IpAddrKind
+- Both IpAddrKind::V4 and IpAddrKind::V6 are of the same type: IpAddrKind
 
 ```rust
 // function which takes IpAddrKind
@@ -93,7 +93,7 @@ class: left
 
 # Advantages of enum over struct
 
-* Each variant can have different types and amounts of associated data
+- Each variant can have different types and amounts of associated data
 
 ```rust
 enum IpAddr {
@@ -112,6 +112,6 @@ class: left
 
 # Summary
 
-* Define a type by enumerating its possible values
+- Define a type by enumerating its possible values
 
-* Access values with `::`
+- Access values with `::`
