--- a/static/md/7.2_Controlling_Visibility_with_pub.md
+++ b/static/md/7.2_Controlling_Visibility_with_pub.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 7.2
@@ -6,42 +5,46 @@ class: middle, center
 # Controlling Visibility with pub
 
 ---
+
 class: left
 
 # Public & Private
 
-* The default state of all code in Rust is private
+- The default state of all code in Rust is private
 
-* If you don’t use a private function within your program Rust will warn that
+- If you don’t use a private function within your program Rust will warn that
   the function is unused
 
-* When marked public, Rust will stop warning
+- When marked public, Rust will stop warning
 
 ---
+
 class: left
 
 # Making a function public
 
-* Use `pub` keyword to make module, functions and types public
+- Use `pub` keyword to make module, functions and types public
 
-* The `pub` keyword is placed right before `mod` or `fn`
+- The `pub` keyword is placed right before `mod` or `fn`
 
 ---
+
 class: left
 
 # Privacy Rules
 
 If an item is
 
-  * **public** : Accessed by any of its parent modules
+- **public** : Accessed by any of its parent modules
 
-  * **private** : Accessed only by...
+- **private** : Accessed only by...
 
-      * its immediate parent module and
+  - its immediate parent module and
 
-      * any of the parent’s child modules
+  - any of the parent’s child modules
 
 ---
+
 class: left
 
 # Example1
@@ -56,14 +59,15 @@ mod outermost {
     }
 }
 fn try_me() {
-    outermost::middle_function();
-    outermost::middle_secret_function();
-    outermost::inside::inner_function();
-    outermost::inside::secret_function();
+    outermost::middle_function(); // everybody can access public
+    outermost::middle_secret_function(); // immediate parent can access private
+    outermost::inside::inner_function(); // anybody can access public function
+    outermost::inside::secret_function(); // Not an immediate parent to access private
 }
 ```
 
 ---
+
 class: left
 
 # Example1 : Output
@@ -90,20 +94,23 @@ fn try_me() {
 ```
 
 ---
+
 class: left
 
 # Summary
 
-* The default state of all code in Rust is private
+- The default state of all code in Rust is private
 
-* **pub** will make the item public
+- **pub** will make the item public
 
-* If the item is
+- If the item is
 
-  * **public** : It is accessed by any of its parent modules
+  - **public** : It is accessed by any of its parent modules
 
-  * **private** : It is accessed only by
+  - **private** : It is accessed only by
 
-      * its immediate parent module and
+    - its immediate parent module
 
-      * any of the parent’s child modules
+    and
+
+    - any of the parent’s child modules
